fix/contraste

--- a/style.css
+++ b/style.css
@@ -793,6 +793,7 @@ h4 {
 
 .tc-white {
     /*color: yellow !important;*/
+    color: white;
 }
 .col-sm-12 .text-center-contact {
     
